--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+  html,  body{
+      @apply overflow-x-hidden;
+    }
+  }
+
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -28,10 +34,13 @@
   
   body {
     margin: 0;
+    /*
     display: flex;
     place-items: center;
+    */
     min-width: 320px;
     min-height: 100vh;
+    margin: 0 auto;
   }
   
   h1 {
